--- a/Pages/Editar/E_Emergencia.razor
+++ b/Pages/Editar/E_Emergencia.razor
@@ -1,167 +1,193 @@
 ﻿@page "/E_Emergencia"
+@page "/E_Emergencia/{OrdenID:int}"
 
-
+@inject NotificationService notificationService
 @inject EmergenciaBLL emergenciaBll
+@inject PacienteBLL Pacientes
+
 
 <head>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
-<style>
-    .Entrada{
-        display: inline-block;
-        padding: 5px;
-        align-items: center;
-    }
-    .Entrada input{
-        border-radius: 50px;
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border: 15px;
-        margin: 5px;
-    }
-    .Entrada label
-    {
-        margin: 5px;
-    }
-    .Entrada textarea{
-        background-color:#D9D9D9;
-        border-color: #D9D9D9;
-        border-radius: 15px;
-        width: 100%;
-    }
-    .Form{
-        display: block;
-    }
-    #Hallazgos input{
-        width: 100%;
-    }
+    <style>
+        .Entrada {
+            display: inline-block;
+            padding: 5px;
+            align-items: center;
+        }
 
-</style>
+        .Entrada input {
+            border-radius: 50px;
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border: 15px;
+            margin: 5px;
+        }
+
+        .Entrada label {
+            margin: 5px;
+        }
+
+        .Entrada textarea {
+            background-color: #D9D9D9;
+            border-color: #D9D9D9;
+            border-radius: 15px;
+            width: 100%;
+        }
+
+        .Form {
+            display: block;
+        }
+
+        #Hallazgos input {
+            width: 100%;
+
+        }
+    </style>
 
 </head>
 
 <body>
-    
 
-    
+
+
     <div class="RHeader" style="z-index: -1;">
     </div>
 
-        
-    <div class="Form"  style="z-index: 1;">
-    
-        <div style="justify-content: space-between; display: inline-flex;; width:100%;">
-        <h1>Editar Emergencia</h1>
-            <div >
-    <div class="Entrada">
-        <label for="fecha" >Fecha:</label>
-        <input type="date" class="form-control" aria-label="Recipient's username" aria-describedby="basic-addon2" id="fecha" name="fecha">
-    </div>
 
-    <div class="Entrada">
-        <label for="Hora">Hora:</label>
-        <input type="Hora"  id="Hora"  name="Hora">
-    </div>
-    </div>
-    </div>
+    <div class="Form" style="z-index: 1;">
 
-    <br>
-    <div class="Entrada">
-        <label for="M_Consulta" >Motivo de Consulta:</label>
-        <input @bind-value="emergencia.M_Consulta"type="M_Consulta"  id="M_Consulta"   name="M_Consulta">
-    </div>
+        <div style=" width:100%;">
+            
+            <div>
+                <br>
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        <RadzenDropDown AllowClear="true" TValue="string"
+                            FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
+                            class="w-100" Placeholder="Paciente"  Data="Pacientes.GetList()"
+                            TextProperty="Cedula" ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            />
+                    </div>
 
-    <div class="Entrada">
-        <label for="A_Relacionados" >Antecedentes Relacionados:</label>
-        <input type="A_Relacionados"  id="A_Relacionados"   name="A_Relacionados">
-    </div>
-    <br>
-    <div class="Entrada">
-        <label for="A_Previas" >Atenciones Previas:</label>
-        <input type="A_Previas"  id="A_Previas"   name="A_Previas">
-    </div>
+                    <div style="display: flex;">
+                        <div class="Entrada" style="display: flex;">
+                            <RadzenLabel >Fecha</RadzenLabel>
+                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                        </div>
+                    </div>
+                </div>
 
-    <div class="Entrada">
-        <label for="Donde" >Donde?</label>
-        <input type="Donde"  id="Donde"   name="Donde">
-    </div>
 
-    <div class="Entrada">
-        <label for="M_Base" >Medico Base:</label>
-        <input type="M_Base"  id="M_Base"   name="M_Base">
-    </div>
+            </div>
+        </div>
 
-    <div class="Entrada">
-        <label for="Peso" >Peso:</label>
-        <input type="Peso"  id="Peso"   name="Peso">
-        <label for="Peso" >lbs</label>
-    </div>
-    <br>
-    <div class="Entrada">
-        <label >Signos Vitales</label>
-        <label for="TA" >TA:</label>
-        <input type="TA"  id="TA"   name="TA">
-        <label for="FC" >FC:</label>
-        <input type="FC"  id="FC"   name="FC">
-        <label for="Temperatura" >Temperatura:</label>
-        <input type="Temperatura"  id="Temperatura"   name="Temperatura">
-        <label for="Temperatura" >C</label>
-    </div>
+        <br>
+        <div class="Entrada">
+            <label for="M_Consulta">Motivo de Consulta:</label>
+            <RadzenTextBox Bind="emergencia.M_Consulta" name="M_Consulta"/>
+            <RadzenRequiredValidator Component="M_Consulta" Text="Campo Requerido" Popup="true" Style="position: absolute" />
+        </div>
 
-    <div class="Entrada" style="display: inline-block;">
-        <label >Laboratorios</label>
-        <label for="Hemograma" >Hemograma:</label>
-        <input type="Hemograma"  id="Hemograma"   name="Hemograma">
-        <label for="Ex_Orina" >Ex.Orina:</label>
-        <input type="Ex_Orina"  id="Ex_Orina"   name="Ex_Orina">
-        <label for="Glisemia" >Glisemia:</label>
-        <input type="Glisemia"  id="Glisemia"   name="Glisemia">
-        <label for="Coprologico" >Coprologico:</label>
-        <input type="Coprologico"  id="Coprologico"   name="Coprologico">
-    </div>
-    <br>
-    <div class="Entrada" style="display: flex; align-items: center;" >
-        <label for="Imagenes" >Imagenes:</label>
-        <input type="Imagenes"  id="Imagenes"   name="Imagenes">
+        <div class="Entrada">
+            <label for="A_Relacionados">Antecedentes Relacionados:</label>
+            <RadzenTextBox  Bind="emergencia.Antecedentes" 
+                name="A_Relacionados"/>
+        </div>
+        <br>
+        <div class="Entrada">
+            <label for="A_Previas">Atenciones Previas:</label>
+            <RadzenTextBox  Bind="emergencia.AtencionesPrevias"  name="A_Previas"/>
+        </div>
 
-        <label for="Especificacion" >Especfique</label>
-        <textarea type="Especificacion"  id="Especificacion"   name="Especificacion"></textarea>
+        <div class="Entrada">
+            <label for="Donde">Donde?</label>
+            <RadzenTextBox name="Donde"/>
+        </div>
+
+        <div class="Entrada">
+            <label for="M_Base">Medico Base:</label>
+            <RadzenTextBox name="M_Base"/>
+        </div>
+
+        <div class="Entrada">
+            <label for="Peso">Peso:</label>
+            <RadzenTextBox  Bind="emergencia.Peso" name="Peso"/>
+            <label for="Peso">lbs</label>
+        </div>
+        <br>
+        <div class="Entrada">
+            <label>Signos Vitales</label>
+            <label for="TA">TA:</label>
+            <RadzenTextBox  Bind="emergencia.TA" name="TA"/>
+            <label for="FC">FC:</label>
+            <RadzenTextBox  Bind="emergencia.FC" name="FC"/>
+            <label for="Temperatura">Temperatura:</label>
+            <RadzenTextBox  Bind="emergencia.Temperatura" name="Temperatura"/>
+            <label for="Temperatura">C</label>
+        </div>
+
+        <div class="Entrada" style="display: inline-block;">
+            <label>Laboratorios</label>
+            <label for="Hemograma">Hemograma:</label>
+            <RadzenTextBox  Bind="emergencia.Hemogramas"  name="Hemograma"/>
+            <label for="Ex_Orina">Ex.Orina:</label>
+            <RadzenTextBox Bind="emergencia.Ex_Orina" name="Ex_Orina"/>
+            <label for="Glisemia">Glisemia:</label>
+            <RadzenTextBox  Bind="emergencia.Glisemia" name="Glisemia"/>
+            <label for="Coprologico">Coprologico:</label>
+            <RadzenTextBox  Bind="emergencia.Coprologico" name="Coprologico"/>
+        </div>
+        <br>
+        <div class="Entrada" style="display: flex; align-items: center;">
+            <label for="Imagenes">Imagenes:</label>
+            <RadzenTextBox Bind="emergencia.Imagenes" name="Imagenes"/>
+
+            <label for="Especificacion">Especfique</label>
+            <RadzenTextArea type="Especificacion" id="Especificacion" Bind="emergencia.Especifique"
+                name="Especificacion"></RadzenTextArea>
+        </div>
     </div>
-    </div>
-    <div  class="Entrada" style="display: flex;">
+    <div class="Entrada" style="display: flex;">
         <label for="Diagnostico">Diagnostico</label>
-        <input type="Diagnostico" id="Diagnostico" style="width: 100%;" name="Diagnostico">
+        <RadzenTextArea  Bind="emergencia.Diagnostico" name="Diagnostico"/>
     </div>
-        <div class="Entrada " style="display:flex;" >
-        <label for="TyM" >Tratamientos y Medicamentos:</label>
-        <textarea type="TyM"  id="TyM"  style="width: 100%;" name="TyM"></textarea>
+    <div class="Entrada " style="display:flex;">
+        <label for="TyM">Tratamientos y Medicamentos:</label>
+        <RadzenTextArea   Bind="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
     <center>
-        <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" @onclick ="Guardar">Registrar</button>
+        <a href="/V_Emergencia/@emergencia.OrdenID"><button type="button" class="btn btn-primary"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
+                @onclick="Guardar">Guardar</button></a>
+        <a href="/V_Emergencia/@emergencia.OrdenID"><button type="button" class="btn btn-danger"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;">Cancelar</button></a>
     </center>
+
 
 
 
 
 </body>
 @code {
+    public Emergencia emergencia { get; set; } = new Emergencia();
+    public DetalleEmergencia Demergencia { get; set; } = new DetalleEmergencia();
+    public Paciente? paciente = new Paciente();
 
+    protected override void OnInitialized()
+    {
 
-    public Emergencia emergencia {get; set;} = new Emergencia();
-
-     protected override void OnInitialized(){
-
-        emergencia.OrdenID=0;
+        emergencia.OrdenID = 0;
     }
 
 
-     private void Buscar()
+    private void Buscar()
     {
         var emergenciaEncontrada = emergenciaBll.Buscar(emergencia.OrdenID);
-        if(emergenciaEncontrada != null)
+        if (emergenciaEncontrada != null)
         {
             Console.WriteLine($"Se encontro una ocupacion con el ID{this.emergencia.OrdenID}");
             this.emergencia = emergenciaEncontrada;
-            
+
         }
         else
         {
@@ -170,42 +196,44 @@
         }
     }
 
+    void ShowNotification(NotificationMessage message)
+    {
+        notificationService.Notify(message);
+    }
 
-    public void Nuevo(){
+    public void Nuevo()
+    {
         this.emergencia = new Emergencia();
     }
 
-     public void Guardar(){
+    public void Guardar()
+    {
+        if(emergenciaBll.Guardar(this.emergencia))
+        {
+            Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
+            this.Nuevo();
+            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+        }
 
-        emergenciaBll.Guardar(this.emergencia);
-        Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
-        this.Nuevo();
-        
-        
-        //Console.WriteLine("Campos no validos o no completados");
     }
-    
 
 
 
-    public void eliminar(){
 
-       
-        
-    bool RES = emergenciaBll.Eliminar(this.emergencia);
+    public void eliminar()
+    {
+        bool RES = emergenciaBll.Eliminar(this.emergencia);
 
-    if(RES == false){
-        Console.WriteLine("Eliminado Correctamente");
-        Nuevo();
+        if (RES == false)
+        {
+            Console.WriteLine("Eliminado Correctamente");
+            Nuevo();
+        }
+        else
+        {
+            Console.WriteLine("No se borro nada");
+        }
     }
-    else{
-       Console.WriteLine("No se borro nada");
-    }
-            
-            
 
-        
-    }
-    
 
 }
