--- a/Pages/Editar/E_EmergenciaA.razor
+++ b/Pages/Editar/E_EmergenciaA.razor
@@ -1,4 +1,13 @@
-﻿@page "/E_EmergenciaA"
+@page "/E_EmergenciaA"
+@page "/E_EmergenciaA/{OrdenID:int}"
+
+@using DrEmergencias;
+
+<h1>Nueva Emergencia Asegurada</h1>
+
+@inject NotificationService notificationService
+@inject EmergenciaABLL EmergenciaA
+@inject PacienteBLL Paciente
 
 <head>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
@@ -15,6 +24,7 @@
             border-color: #D9D9D9;
             border: 15px;
             margin: 5px;
+            
         }
 
         .Entrada label {
@@ -26,139 +36,146 @@
             border-color: #D9D9D9;
             border-radius: 15px;
             width: 100%;
+            
         }
 
         .Form {
             display: block;
         }
 
-        #Hallazgos input {
+        #Hallazgos RadzenTextBox {
             width: 100%;
         }
     </style>
 
 </head>
 
-<body>
-
-
-
-    <div class="RHeader" style="z-index: -1;">
-    </div>
-
-
+<body >
 
     <div class="Form">
+           <div>
+                <br>
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        
+                        <RadzenDropDown AllowClear="true" TValue="string"
+                            FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
+                            class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
+                            ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            />
+                            
+                    </div>
 
-        <div style="justify-content: space-between; display: inline-flex;; width:100%;">
-            <h1>Editar Emergencia</h1>
-            <div>
-                <div class="Entrada">
-                    <label for="fecha">Fecha:</label>
-                    <input type="date" class="form-control" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" id="fecha" name="fecha">
+                    <div style="display: flex;">
+                        <div class="Entrada" style="display: flex;">
+                            <RadzenLabel >Fecha</RadzenLabel>
+                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                        </div>
+                    </div>
                 </div>
-
-                <div class="Entrada">
-                    <label for="Hora">Hora:</label>
-                    <input type="Hora" id="Hora" name="Hora">
-                </div>
-            </div>
-        </div>
 
     </div>
 
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
-            <input type="ars" id="ars" name="ars">
+            <RadzenTextBox  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
         </div>
 
         <div class="Entrada" style="">
             <label for="nss">NSS:</label>
-            <input type="nss" id="nss" name="nss">
+            <RadzenNumeric  id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.NSS" name="nss"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <input type="M_Consulta" id="M_Consulta" name="M_Consulta">
+            <RadzenTextBox type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <input type="A_Relacionados" id="A_Relacionados" name="A_Relacionados">
+            <RadzenTextBox type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <input type="A_Previas" id="A_Previas" name="A_Previas">
+            <RadzenTextBox type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <input type="Donde" id="Donde" name="Donde">
+            <RadzenTextBox type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <input type="M_Base" id="M_Base" name="M_Base">
+            <RadzenTextBox type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
-            <input type="Peso" id="Peso" name="Peso">
+            <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+             @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
         <div class="Entrada">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
-            <input type="TA" id="TA" name="TA">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.TA" name="TA"/>
             <label for="FC">FC:</label>
-            <input type="FC" id="FC" name="FC">
+            <RadzenNumeric  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FR" name="FR"/>
+            <label for="FR">FR</label>
+            <RadzenNumeric  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
-            <input type="Temperatura" id="Temperatura" name="Temperatura">
+            <RadzenNumeric  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
+
 
         <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
                 <label for="Cabeza">Cabeza</label>
-                <input type="Cabeza" id="Cabeza" name="Cabeza">
+                <RadzenTextBox  style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
             </div>
             <div style="display: flex;">
                 <label for="Cuello">Cuello</label>
-                <input type="Cuello" id="Cuello" name="Cuello">
+                <RadzenTextBox  style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
             </div>
             <div style="display: flex;">
                 <label for="Torax">Torax</label>
-                <input type="Torax" id="Torax" name="Torax">
+                <RadzenTextBox  style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
             </div>
             <div style="display: flex;">
                 <label for="Pulmones">Pulmones</label>
-                <input type="Pulmones" id="Pulmones" name="Pulmones">
+                <RadzenTextBox  style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
             </div>
             <div style="display: flex;">
                 <label for="Corazon">Corazon</label>
-                <input type="Corazon" id="Corazon" name="Corazon">
+                <RadzenTextBox  style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
             </div>
             <div style="display: flex;">
                 <label for="Abdomen">Abdomen</label>
-                <input type="Abdomen" id="Abdomen" name="Abdomen">
+                <RadzenTextBox  style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Inferiores">Extreminades Inferiores</label>
-                <input type="E_Inferiores" id="E_Inferiores" name="E_Inferiores">
+                <RadzenTextBox  style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Superiores">Extreminades Superiores</label>
-                <input type="E_Superiores" id="E_Superiores" name="E_Superiores">
+                <RadzenTextBox  style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
             </div>
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
-                <input type="Diagnostico" id="Diagnostico" name="Diagnostico">
+                <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
         <hr>
@@ -166,37 +183,111 @@
             <label>Laboratorios</label>
             <br>
             <label for="Hemograma">Hemograma:</label>
-            <input type="Hemograma" id="Hemograma" name="Hemograma">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
-            <input type="Ex_Orina" id="Ex_Orina" name="Ex_Orina">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <input type="Glisemia" id="Glisemia" name="Glisemia">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <input type="Coprologico" id="Coprologico" name="Coprologico">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <input type="Imagenes" id="Imagenes" name="Imagenes">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
             <label for="Especificacion">Especfique</label>
-            <textarea type="Especificacion" id="Especificacion" name="Especificacion"></textarea>
+            <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
     </div>
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <textarea type="TyM" id="TyM" style="width: 100%;" name="TyM"></textarea>
+        <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
+
     <center>
-        <button type="button" class="btn btn-primary"
-            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Guardar</button>
+                <a href="/V_EmergenciaA/@emergencia.OrdenID"><button type="button" class="btn btn-primary"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
+                @onclick="Guardar">Guardar</button></a>
+        <a href="/V_EmergenciaA/@emergencia.OrdenID"><button type="button" class="btn btn-danger"
+                style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;">Cancelar</button></a>
     </center>
+    </div>
+    </body>                             
 
-
-
-
-</body>
 @code {
+    
+    
+    void ShowNotification(NotificationMessage message)
+    {
+        notificationService.Notify(message);
+    }
+
+
+    public EmergenciaA emergencia {get; set;} = new EmergenciaA();
+
+    protected override void OnInitialized(){
+
+
+    }
+
+
+    private void Buscar()
+    {
+        var emergenciaEncontrada = EmergenciaA.Buscar(emergencia.OrdenID);
+        if(emergenciaEncontrada != null)
+        {
+            Console.WriteLine($"Se encontro una ocupacion con el ID{this.emergencia.OrdenID}");
+            this.emergencia = emergenciaEncontrada;
+            
+        }
+        else
+        {
+            Nuevo();
+            Console.WriteLine("Id no existente");
+        }
+    }
+
+
+    public void Nuevo(){
+        this.emergencia = new EmergenciaA();
+    }
+
+    public void Guardar(){
+        if(EmergenciaA.Guardar(this.emergencia))
+        {
+            Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
+            this.Nuevo();
+            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Info, Summary = "Registro Actualizado", Detail = "Modificado con Exito", Duration = 4000 });
+        }
+
+        //Console.WriteLine("Campos no validos o no completados");
+    }
+    
+
+
+
+    public void eliminar(){
+    bool RES = EmergenciaA.Eliminar(this.emergencia);
+
+    if(RES == false){
+        Console.WriteLine("Eliminado Correctamente");
+        Nuevo();
+    }
+    else{
+       Console.WriteLine("No se borro nada");
+    }
+            
+            
+
+        
+    }
+    
 
 }
