--- a/Pages/Registros/R_EmergenciaAsegurada.razor
+++ b/Pages/Registros/R_EmergenciaAsegurada.razor
@@ -1,5 +1,9 @@
 ﻿@page "/R_EmergenciaA"
+@using DrEmergencias;
+
 <h1>Nueva Emergencia Asegurada</h1>
+
+@inject NotificationService notificationService
 @inject EmergenciaABLL EmergenciaA
 @inject PacienteBLL Paciente
 
@@ -18,6 +22,7 @@
             border-color: #D9D9D9;
             border: 15px;
             margin: 5px;
+            
         }
 
         .Entrada label {
@@ -29,49 +34,42 @@
             border-color: #D9D9D9;
             border-radius: 15px;
             width: 100%;
+            
         }
 
         .Form {
             display: block;
         }
 
-        #Hallazgos input {
+        #Hallazgos RadzenTextBox {
             width: 100%;
         }
     </style>
 
 </head>
 
-<body>
-
-
-
-    <div class="RHeader" style="z-index: -1;">
-    </div>
-
-
+<body >
 
     <div class="Form">
+
 
             <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
                     <div>
+                        
                         <RadzenDropDown AllowClear="true" TValue="string"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
-                            class="w-100" Placeholder="Paciente" bind="Demergencia.PacienteID" Data="Paciente.GetList()" TextProperty="Cedula"
-                            ValueProperty="PacienteID" />
+                            class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
+                            ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            />
+                            
                     </div>
 
-                    <div>
-                        <div class="Entrada">
-                            <label for="fecha">Fecha:</label>
-                            <input type="date" class="form-control" aria-label="Recipient's username"
-                                aria-describedby="basic-addon2" @bind="emergencia.Fecha" id="fecha" name="fecha">
-                        </div>
-                        <div class="Entrada">
-                            <label for="Hora">Hora:</label>
-                            <input type="Hora" id="Hora" @bind="emergencia.Hora" name="Hora">
+                    <div style="display: flex;">
+                        <div class="Entrada" style="display: flex;">
+                            <RadzenLabel >Fecha</RadzenLabel>
+                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
                         </div>
                     </div>
                 </div>
@@ -81,94 +79,103 @@
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
-            <input type="ars" id="ars"@bind-value="emergencia.ARS" name="ars">
+            <RadzenTextBox  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
         </div>
 
         <div class="Entrada" style="">
             <label for="nss">NSS:</label>
-            <input type="nss" id="nss" @bind-value="emergencia.NSS" name="nss">
+            <RadzenNumeric  id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.NSS" name="nss"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <input type="M_Consulta" id="M_Consulta" @bind-value="emergencia.M_Consulta" name="M_Consulta">
+            <RadzenTextBox type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <input type="A_Relacionados" id="A_Relacionados" @bind-value="emergencia.Antecedentes" name="A_Relacionados">
+            <RadzenTextBox type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <input type="A_Previas" id="A_Previas" @bind-value="emergencia.AtencionesPrevias" name="A_Previas">
+            <RadzenTextBox type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <input type="Donde" id="Donde" @bind-value="emergencia.Donde" name="Donde">
+            <RadzenTextBox type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <input type="M_Base" id="M_Base" @bind-value="emergencia.MedicoBase" name="M_Base">
+            <RadzenTextBox type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
-            <input type="Peso" id="Peso" @bind-value="emergencia.Peso" name="Peso">
+            <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+             @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
         <div class="Entrada">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
-            <input type="TA" id="TA" @bind-value="emergencia.TA" name="TA">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.TA" name="TA"/>
             <label for="FC">FC:</label>
-            <input type="FC" id="FC" @bind-value="emergencia.FC" name="FC">
+            <RadzenNumeric  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FR" name="FR"/>
+            <label for="FR">FR</label>
+            <RadzenNumeric  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
-            <input type="Temperatura" id="Temperatura" @bind-value="emergencia.Temperatura" name="Temperatura">
+            <RadzenNumeric  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
+
 
         <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
                 <label for="Cabeza">Cabeza</label>
-                <input type="Cabeza" id="Cabeza" @bind-value="emergencia.Cabeza" name="Cabeza">
+                <RadzenTextBox  style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
             </div>
             <div style="display: flex;">
                 <label for="Cuello">Cuello</label>
-                <input type="Cuello" id="Cuello" @bind-value="emergencia.Cuello" name="Cuello">
+                <RadzenTextBox  style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
             </div>
             <div style="display: flex;">
                 <label for="Torax">Torax</label>
-                <input type="Torax" id="Torax" @bind-value="emergencia.Torax" name="Torax">
+                <RadzenTextBox  style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
             </div>
             <div style="display: flex;">
                 <label for="Pulmones">Pulmones</label>
-                <input type="Pulmones" id="Pulmones" @bind-value="emergencia.Pulmones" name="Pulmones">
+                <RadzenTextBox  style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
             </div>
             <div style="display: flex;">
                 <label for="Corazon">Corazon</label>
-                <input type="Corazon" id="Corazon" @bind-value="emergencia.Corazon" name="Corazon">
+                <RadzenTextBox  style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
             </div>
             <div style="display: flex;">
                 <label for="Abdomen">Abdomen</label>
-                <input type="Abdomen" id="Abdomen" @bind-value="emergencia.Abdomen" name="Abdomen">
+                <RadzenTextBox  style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Inferiores">Extreminades Inferiores</label>
-                <input type="E_Inferiores" id="E_Inferiores" @bind-value="emergencia.E_Inferiores" name="E_Inferiores">
+                <RadzenTextBox  style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Superiores">Extreminades Superiores</label>
-                <input type="E_Superiores" id="E_Superiores" @bind-value="emergencia.E_Superiores" name="E_Superiores">
+                <RadzenTextBox  style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
             </div>
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
-                <input type="Diagnostico" id="Diagnostico" @bind-value="emergencia.Diagnostico" name="Diagnostico">
+                <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
         <hr>
@@ -176,45 +183,54 @@
             <label>Laboratorios</label>
             <br>
             <label for="Hemograma">Hemograma:</label>
-            <input type="Hemograma" id="Hemograma" @bind-value="emergencia.Hemogramas" name="Hemograma">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
-            <input type="Ex_Orina" id="Ex_Orina" @bind-value="emergencia.Ex_Orina" name="Ex_Orina">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <input type="Glisemia" id="Glisemia"@bind-value="emergencia.Glisemia" name="Glisemia">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <input type="Coprologico" id="Coprologico" @bind-value="emergencia.Coprologico" name="Coprologico">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <input type="Imagenes" id="Imagenes"@bind-value="emergencia.Imagenes" name="Imagenes">
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
             <label for="Especificacion">Especfique</label>
-            <textarea type="Especificacion" id="Especificacion"@bind="emergencia.Especifique" name="Especificacion"></textarea>
+            <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
     </div>
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <textarea type="TyM" id="TyM" style="width: 100%;" @bind="emergencia.TyM" name="TyM"></textarea>
+        <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
+
     <center>
-        <button type="button" class="btn btn-primary"
-            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</button>
+        <RadzenButton ButtonType="ButtonType.Submit" class="btn btn-primary" Click="Guardar"
+            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</RadzenButton>
     </center>
     </div>
+    </body>                             
 
-
-
-</body>
 @code {
     
+    
+    void ShowNotification(NotificationMessage message)
+    {
+        notificationService.Notify(message);
+    }
+
+
     public EmergenciaA emergencia {get; set;} = new EmergenciaA();
-    public DetalleEmergenciaA Demergencia { get; set; } = new DetalleEmergenciaA();
 
     protected override void OnInitialized(){
 
-        emergencia.OrdenID=0;
 
     }
 
@@ -241,12 +257,13 @@
     }
 
     public void Guardar(){
+        if(EmergenciaA.Guardar(this.emergencia))
+        {
+            Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
+            this.Nuevo();
+            ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Success, Summary = "Registro Actualizado", Detail = "Guardado con Exito", Duration = 4000 });
+        }
 
-        EmergenciaA.Guardar(this.emergencia);
-        Console.WriteLine($"Se guardo en el {this.emergencia.OrdenID}");
-        this.Nuevo();
-        
-        
         //Console.WriteLine("Campos no validos o no completados");
     }
     
