--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -1,7 +1,9 @@
 ﻿@page "/V_EmergenciaA"
 @page "/V_EmergenciaA/{OrdenID:int}"
 
+@inject NotificationService notificationService
 @inject EmergenciaABLL EmergenciaA
+@inject PacienteBLL Paciente
 
 <head>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-bold-rounded/css/uicons-bold-rounded.css'>
@@ -52,116 +54,129 @@
 
 
     <div class="Form">
+           <div>
+                <br>
+                <div style="display: flex; justify-content: space-between;">
+                    <div>
+                        
+                        <RadzenDropDown AllowClear="true" TValue="string"
+                            FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
+                            class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
+                            ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            />
+                            
+                    </div>
 
-        <div style="justify-content: space-between; display: inline-flex;; width:100%;">
-            <h1>Nueva Emergencia</h1>
-            <div>
-                <div class="Entrada">
-                    <label for="fecha">Fecha:</label>
-                    <label> type="date" class="form-control" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" id="fecha" name="fecha"></label>
+                    <div style="display: flex;">
+                        <div class="Entrada" style="display: flex;">
+                            <RadzenLabel >Fecha</RadzenLabel>
+                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                        </div>
+                    </div>
                 </div>
-
-                <div class="Entrada">
-                    <label for="Hora">Hora:</label>
-                    <labe> type="Hora" id="Hora" name="Hora"></labe>
-                </div>
-            </div>
-        </div>
 
     </div>
 
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
-            <labe> type="ars" id="ars" name="ars"></labe>
+            <RadzenTextBox  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
         </div>
 
         <div class="Entrada" style="">
             <label for="nss">NSS:</label>
-            <labe> type="nss" id="nss" name="nss"></labe>
+            <RadzenNumeric  id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.NSS" name="nss"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <labe> type="M_Consulta" id="M_Consulta" name="M_Consulta"></labe>
+            <RadzenTextBox type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <labe> type="A_Relacionados" id="A_Relacionados" name="A_Relacionados"></labe>
+            <RadzenTextBox type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <labe> type="A_Previas" id="A_Previas" name="A_Previas"></labe>
+            <RadzenTextBox type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <labe> type="Donde" id="Donde" name="Donde"></labe>
+            <RadzenTextBox type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <labe> type="M_Base" id="M_Base" name="M_Base"></labe>
+            <RadzenTextBox type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
-            <labe> type="Peso" id="Peso" name="Peso"></labe>
+            <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+             @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
         <div class="Entrada">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
-            <labe> type="TA" id="TA" name="TA"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.TA" name="TA"/>
             <label for="FC">FC:</label>
-            <labe> type="FC" id="FC" name="FC"></labe>
+            <RadzenNumeric  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FR" name="FR"/>
+            <label for="FR">FR</label>
+            <RadzenNumeric  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
-            <labe> type="Temperatura" id="Temperatura" name="Temperatura"></labe>
+            <RadzenNumeric  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            @bind-Value="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
+
 
         <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
                 <label for="Cabeza">Cabeza</label>
-                <labe> type="Cabeza" id="Cabeza" name="Cabeza"></labe>
+                <RadzenTextBox  style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
             </div>
             <div style="display: flex;">
                 <label for="Cuello">Cuello</label>
-                <labe> type="Cuello" id="Cuello" name="Cuello"></labe>
+                <RadzenTextBox  style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
             </div>
             <div style="display: flex;">
                 <label for="Torax">Torax</label>
-                <labe> type="Torax" id="Torax" name="Torax"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
             </div>
             <div style="display: flex;">
                 <label for="Pulmones">Pulmones</label>
-                <labe> type="Pulmones" id="Pulmones" name="Pulmones"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
             </div>
             <div style="display: flex;">
                 <label for="Corazon">Corazon</label>
-                <labe> type="Corazon" id="Corazon" name="Corazon"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
             </div>
             <div style="display: flex;">
                 <label for="Abdomen">Abdomen</label>
-                <labe> type="Abdomen" id="Abdomen" name="Abdomen"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Inferiores">Extreminades Inferiores</label>
-                <labe> type="E_Inferiores" id="E_Inferiores" name="E_Inferiores"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Superiores">Extreminades Superiores</label>
-                <labe> type="E_Superiores" id="E_Superiores" name="E_Superiores"></labe>
+                <RadzenTextBox  style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
             </div>
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
-                <labe> type="Diagnostico" id="Diagnostico" name="Diagnostico"></labe>
+                <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
         <hr>
@@ -169,31 +184,37 @@
             <label>Laboratorios</label>
             <br>
             <label for="Hemograma">Hemograma:</label>
-            <labe> type="Hemograma" id="Hemograma" name="Hemograma"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
-            <labe> type="Ex_Orina" id="Ex_Orina" name="Ex_Orina"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <labe> type="Glisemia" id="Glisemia" name="Glisemia"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <labe> type="Coprologico" id="Coprologico" name="Coprologico"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <labe> type="Imagenes" id="Imagenes" name="Imagenes"></labe>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
             <label for="Especificacion">Especfique</label>
-            <p type="Especificacion" id="Especificacion" name="Especificacion"></p>
+            <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
     </div>
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <textarea type="TyM" id="TyM" style="width: 100%;" name="TyM"></textarea>
+        <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
+    </div>
     </div>
     <center>
-        <button type="button" class="btn btn-primary"
-            style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</button>
+        <a href="/E_EmergenciaA/@emergencia.OrdenID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
+        <a href="/"><button type="button" class="btn btn-danger" style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;" @onclick="Eliminar">Eliminar</button></a>
     </center>
 </body>
 
@@ -228,7 +249,10 @@
         }
     }
 
-
+    void ShowNotification(NotificationMessage message)
+    {
+        notificationService.Notify(message);
+    }
     public void Nuevo(){
         this.emergencia = new EmergenciaA();
     }
@@ -246,21 +270,7 @@
 
 
 
-    public void eliminar(){
-    bool RES = EmergenciaA.Eliminar(this.emergencia);
-
-    if(RES == false){
-        Console.WriteLine("Eliminado Correctamente");
-        Nuevo();
+    public void Eliminar(){
+        ShowNotification(new NotificationMessage { Severity = NotificationSeverity.Error, Summary = "Registro Actualizado", Detail = "Eliminado con Exito", Duration = 4000 });
     }
-    else{
-       Console.WriteLine("No se borro nada");
-    }
-            
-            
-
-        
-    }
-    
-
 }
