--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -59,7 +59,7 @@
                 <div style="display: flex; justify-content: space-between;">
                     <div>
                         
-                        <RadzenDropDown AllowClear="true" TValue="string"
+                        <RadzenDropDown Disabled=true  AllowClear="true" TValue="string"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
                             class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
                             ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
@@ -70,7 +70,7 @@
                     <div style="display: flex;">
                         <div class="Entrada" style="display: flex;">
                             <RadzenLabel >Fecha</RadzenLabel>
-                            <RadzenDatePicker @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
+                            <RadzenDatePicker Disabled=true @bind-Value=@emergencia.Fecha ShowTime="true" HourFormat="12" DateFormat="MM/dd/yyyy h:mm tt" />
                         </div>
                     </div>
                 </div>
@@ -80,43 +80,43 @@
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
-            <RadzenTextBox  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
+            <RadzenTextBox Disabled=true  id="ars"@bind-Value="emergencia.ARS" name="ars"/>
         </div>
 
         <div class="Entrada" style="">
             <label for="nss">NSS:</label>
-            <RadzenNumeric  id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric  Disabled=true id="nss" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.NSS" name="nss"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="M_Consulta">Motivo de Consulta:</label>
-            <RadzenTextBox type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
+            <RadzenTextBox Disabled=true type="M_Consulta" id="M_Consulta" @bind-Value="emergencia.M_Consulta" name="M_Consulta"/>
         </div>
 
         <div class="Entrada">
             <label for="A_Relacionados">Antecedentes Relacionados:</label>
-            <RadzenTextBox type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
+            <RadzenTextBox Disabled=true type="A_Relacionados" id="A_Relacionados" @bind-Value="emergencia.Antecedentes" name="A_Relacionados"/>
         </div>
         <br>
         <div class="Entrada">
             <label for="A_Previas">Atenciones Previas:</label>
-            <RadzenTextBox type="A_Previas" id="A_Previas" name="A_Previas"/>
+            <RadzenTextBox Disabled=true type="A_Previas" id="A_Previas" name="A_Previas"/>
         </div>
 
         <div class="Entrada">
             <label for="Donde">Donde?</label>
-            <RadzenTextBox type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
+            <RadzenTextBox Disabled=true type="Donde" id="Donde" @bind-Value="emergencia.Donde" name="Donde"/>
         </div>
 
         <div class="Entrada">
             <label for="M_Base">Medico Base:</label>
-            <RadzenTextBox type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
+            <RadzenTextBox Disabled=true type="M_Base" id="M_Base" @bind-Value="emergencia.MedicoBase" name="M_Base"/>
         </div>
 
         <div class="Entrada">
             <label for="Peso">Peso:</label>
-            <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric  Disabled=true id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
              @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
@@ -124,16 +124,16 @@
         <div class="Entrada">
             <label>Signos Vitales</label>
             <label for="TA">TA:</label>
-            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric Disabled=true ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.TA" name="TA"/>
             <label for="FC">FC:</label>
-            <RadzenNumeric  id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric  Disabled=true id="FR" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.FR" name="FR"/>
             <label for="FR">FR</label>
-            <RadzenNumeric  id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric  Disabled=true id="FC" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.FC" name="FC"/>
             <label for="Temperatura">Temperatura:</label>
-            <RadzenNumeric  id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric  Disabled=true id="Temperatura" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             @bind-Value="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
@@ -144,39 +144,39 @@
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
                 <label for="Cabeza">Cabeza</label>
-                <RadzenTextBox  style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cabeza" id="Cabeza" @bind-Value="emergencia.Cabeza" name="Cabeza"/>
             </div>
             <div style="display: flex;">
                 <label for="Cuello">Cuello</label>
-                <RadzenTextBox  style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;" type="Cuello" id="Cuello" @bind-Value="emergencia.Cuello" name="Cuello"/>
             </div>
             <div style="display: flex;">
                 <label for="Torax">Torax</label>
-                <RadzenTextBox  style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Torax" @bind-Value="emergencia.Torax" name="Torax"/>
             </div>
             <div style="display: flex;">
                 <label for="Pulmones">Pulmones</label>
-                <RadzenTextBox  style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Pulmones" @bind-Value="emergencia.Pulmones" name="Pulmones"/>
             </div>
             <div style="display: flex;">
                 <label for="Corazon">Corazon</label>
-                <RadzenTextBox  style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Corazon" @bind-Value="emergencia.Corazon" name="Corazon"/>
             </div>
             <div style="display: flex;">
                 <label for="Abdomen">Abdomen</label>
-                <RadzenTextBox  style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="Abdomen" @bind-Value="emergencia.Abdomen" name="Abdomen"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Inferiores">Extreminades Inferiores</label>
-                <RadzenTextBox  style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Inferiores" @bind-Value="emergencia.E_Inferiores" name="E_Inferiores"/>
             </div>
             <div style="display: flex;">
                 <label for="E_Superiores">Extreminades Superiores</label>
-                <RadzenTextBox  style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
+                <RadzenTextBox  Disabled=true style="width: 100%;"  id="E_Superiores" @bind-Value="emergencia.E_Superiores" name="E_Superiores"/>
             </div>
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
-                <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
+                <RadzenTextArea Disabled=true style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
         <hr>
@@ -185,31 +185,31 @@
             <br>
             <label for="Hemograma">Hemograma:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
+            id="Hemograma" Disabled=true @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
+            id="Ex_Orina" Disabled=true @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric Disabled=true ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric Disabled=true  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            <RadzenNumeric Disabled=true  ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
             <label for="Especificacion">Especfique</label>
-            <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
+            <RadzenTextArea Disabled=true  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
     </div>
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
-        <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
+        <RadzenTextArea Disabled=true  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
     </div>
     <center>
