--- a/Pages/Vistas/V_Paciente.razor
+++ b/Pages/Vistas/V_Paciente.razor
@@ -50,95 +50,100 @@
     <body>
         <h1>Ver Paciente</h1>
 
-        <EditForm model="Paciente">
+  <EditForm model="Paciente">
+    <div class="Entrada">
+        <label for="Nombre">Nombre:</label>
+        <RadzenTextBox Disabled=true  name="Nombre" @bind-Value="paciente.PrimerNombre"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="Nombre" >Nombre:</label>
-        <input @bind-value="paciente.PrimerNombre" disabled type="Nombre"  id="Nombre"  name="Nombre">
-        </div>
+    <div class="Entrada">
+        <label for="S_Nombre">Segundo Nombre:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.SegundoNombre" name="S_Nombre"/>
+    </div>
+    <br>
+    <div class="Entrada">
+        <label for="P_Apellido">Primer Apellido:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.PrimerApellido"  name="P_Apellido"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="S_Nombre" >Segundo Nombre:</label>
-        <input @bind-value="paciente.SegundoNombre"disabled type="S_Nombre"  id="S_Nombre"  name="S_Nombre">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="P_Apellido" >Primer Apellido:</label>
-        <input @bind-value="paciente.PrimerApellido"disabled type="P_Apellido"  id="P_Apellido"  name="P_Apellido">
-        </div>
+    <div class="Entrada">
+        <label for="S_Apellido">Segundo Apellido:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.SegundoApellido"  name="S_Apellido"/>
+    </div>
+    <br>
 
-        <div class="Entrada">
-        <label for="S_Apellido" >Segundo Apellido:</label>
-        <input @bind-value="paciente.SegundoApellido" disabled type="S_Apellido"  id="S_Apellido"  name="S_Apellido">
-        </div>
-        <br>
 
-        <div class="Entrada">
-            <label >Sexo:</label>
-            <select id="Persona" name="Persona" disabled @bind="paciente.Sexo">
-            @foreach(var item in Sexos)
+
+                        <div style="display: flex; align-items:center;">
+
+    <div class="Entrada">
+        <label>Sexo:</label>
+        <select id="Persona" name="Persona" @bind="paciente.Sexo">
+            @foreach (var item in Sexos)
             {
-
                 <option value="@item"> @item</option>
             }
-            
+
         </select>
-        </div>
+    </div>
+                        <div class="Entrada" style="display: flex;">
+                            <RadzenLabel >Fecha Nacimiento</RadzenLabel>
+                            <RadzenTextBox Disabled=true  style="display: inline-block;" type="date" class="form-control" aria-label="Recipient's username"
+                                aria-describedby="basic-addon2" @bind-Value="paciente.FechadeNacimiento" id="fecha" name="fecha"/>
+                        </div>
+                        </div>
 
-        <div class="Entrada">
-        <label for="F_Nacimiento" >Fecha de Nacimiento:</label>
-        <input type="F_Nacimiento" @bind-value="paciente.FechadeNacimiento" disabled id="F_Nacimiento"  name="F_Nacimiento">
-        </div>
-        <br>
-        <div class="Entrada">
-        <label for="Cedula" >Cedula:</label>
-        <input type="Cedula"  id="Cedula" @bind-value="paciente.Cedula" disabled  name="Cedula">
-        </div>
 
-        <div class="Entrada">
-        <label for="O_Laboral" >Ocupacion Laboral:</label>
-        <input type="O_Laboral"  id="O_Laboral" @bind-value="paciente.Ocupacion" disabled name="O_Laboral">
-        </div>
 
-        <hr>
-        <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
-        <div class="Entrada">
-        <label for="N_Tutor" >Nombre Tutor:</label>
-        <input type="N_Tutor"  id="N_Tutor" @bind-value="paciente.Tutor" disabled  name="N_Tutor">
-        </div>
+    <br>
+    <div class="Entrada">
+        <label for="Cedula">Cedula:</label>
+        <RadzenTextBox Disabled=true  type="Cedula" id="Cedula" @bind-Value="paciente.Cedula" name="Cedula"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="C_Tutor" >Cedula Tutor:</label>
-        <input type="C_Tutor"  id="C_Tutor" @bind-value="paciente.CedulaTutor" disabled name="C_Tutor">
-        </div>
+    <div class="Entrada">
+        <label for="O_Laboral">Ocupacion Laboral:</label>
+        <RadzenTextBox Disabled=true  type="O_Laboral" id="O_Laboral" @bind-Value="paciente.Ocupacion" name="O_Laboral"/>
+    </div>
 
-        <hr>
-        
-        <div class="Entrada">
-        <label for="Alergias" >Alergias:</label>
-        <input type="Alergias"  id="Alergias" @bind-value="paciente.Alergia" disabled name="Alergias">
-        </div>
+    <hr>
+    <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
+    <div class="Entrada">
+        <label for="N_Tutor">Nombre Tutor:</label>
+        <RadzenTextBox Disabled=true  type="N_Tutor" id="N_Tutor" @bind-Value="paciente.Tutor" name="N_Tutor"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="Telefono" >Telefono:</label>
-        <input type="Telefono"  id="Telefono"  @bind-value="paciente.Telefono" disabled name="Telefono">
-        </div>
+    <div class="Entrada">
+        <label for="C_Tutor">Cedula Tutor:</label>
+        <RadzenTextBox Disabled=true  type="C_Tutor" id="C_Tutor" @bind-Value="paciente.CedulaTutor" name="C_Tutor"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="Direccion" >Direccion:</label>
-        <input @bind-value="paciente.Direccion" type="Direccion"  id="Direccion" disabled  name="Direccion">
-        </div>
+    <hr>
 
-        <div class="Entrada">
-        <label for="Provincia" >Provincia:</label>
-        <input @bind-value="paciente.Provincia" type="Provincia"  id="Provincia" disabled  name="Provincia">
-        </div>
+    <div class="Entrada">
+        <label for="Alergias">Alergias:</label>
+        <RadzenTextBox Disabled=true  type="Alergias" id="Alergias" @bind-Value="paciente.Alergia" name="Alergias"/>
+    </div>
 
-        <div class="Entrada">
-        <label for="Municipio" >Municipio:</label>
-        <input @bind-value="paciente.Municipio" type="Municipio"  id="Municipio"  disabled name="Municipio">
-        </div>
+    <div class="Entrada">
+        <label for="Telefono">Telefono:</label>
+        <RadzenTextBox Disabled=true type="Telefono" id="Telefono" @bind-Value="paciente.Telefono" name="Telefono"/>
+    </div>
 
+    <div class="Entrada">
+        <label for="Direccion">Direccion:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.Direccion" type="Direccion" id="Direccion" name="Direccion"/>
+    </div>
+
+    <div class="Entrada">
+        <label for="Provincia">Provincia:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.Provincia" type="Provincia" id="Provincia" name="Provincia"/>
+    </div>
+
+    <div class="Entrada">
+        <label for="Municipio">Municipio:</label>
+        <RadzenTextBox Disabled=true  @bind-Value="paciente.Municipio" type="Municipio" id="Municipio" name="Municipio"/>
+    </div>
 
     <center>
         <a href="/E_Paciente/@paciente.PacienteID"> <button type="button" class="btn btn-primary" style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;" >Editar</button></a>
