--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -14,7 +14,7 @@
             align-items: center;
         }
 
-        .Entrada labe> {
+        .Entrada label {
             border-radius: 50px;
             background-color: #D9D9D9;
             border-color: #D9D9D9;
@@ -54,6 +54,7 @@
 
 
     <div class="Form">
+
            <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
