--- a/Pages/Vistas/V_Paciente.razor
+++ b/Pages/Vistas/V_Paciente.razor
@@ -78,7 +78,7 @@
 
     <div class="Entrada">
         <label>Sexo:</label>
-        <select id="Persona" name="Persona" @bind="paciente.Sexo">
+        <select id="Persona" disabled style="background-color: white;" name="Persona" @bind="paciente.Sexo">
             @foreach (var item in Sexos)
             {
                 <option value="@item"> @item</option>
@@ -95,30 +95,33 @@
 
 
 
-    <br>
+        <RadzenTabs>
+        <Tabs>
+        <RadzenTabsItem Text="Mayor de Edad">
     <div class="Entrada">
         <label for="Cedula">Cedula:</label>
-        <RadzenTextBox Disabled=true  type="Cedula" id="Cedula" @bind-Value="paciente.Cedula" name="Cedula"/>
+        <RadzenTextBox Disabled=true type="Cedula" id="Cedula" @bind-Value="paciente.Cedula" name="Cedula"/>
     </div>
 
     <div class="Entrada">
         <label for="O_Laboral">Ocupacion Laboral:</label>
-        <RadzenTextBox Disabled=true  type="O_Laboral" id="O_Laboral" @bind-Value="paciente.Ocupacion" name="O_Laboral"/>
+        <RadzenTextBox Disabled=true type="O_Laboral" id="O_Laboral" @bind-Value="paciente.Ocupacion" name="O_Laboral"/>
     </div>
+        </RadzenTabsItem>
 
-    <hr>
-    <span style="color: rgb(103, 100, 100);">En caso de ser menor</span><br>
+    <RadzenTabsItem Text="Menor de edad">
     <div class="Entrada">
         <label for="N_Tutor">Nombre Tutor:</label>
-        <RadzenTextBox Disabled=true  type="N_Tutor" id="N_Tutor" @bind-Value="paciente.Tutor" name="N_Tutor"/>
+        <RadzenTextBox Disabled=true type="N_Tutor" id="N_Tutor" @bind-Value="paciente.Tutor" name="N_Tutor"/>
     </div>
 
     <div class="Entrada">
         <label for="C_Tutor">Cedula Tutor:</label>
-        <RadzenTextBox Disabled=true  type="C_Tutor" id="C_Tutor" @bind-Value="paciente.CedulaTutor" name="C_Tutor"/>
+        <RadzenTextBox  Disabled=true type="C_Tutor" id="C_Tutor" @bind-Value="paciente.CedulaTutor" name="C_Tutor"/>
     </div>
-
-    <hr>
+    </RadzenTabsItem>
+    </Tabs>
+    </RadzenTabs>
 
     <div class="Entrada">
         <label for="Alergias">Alergias:</label>
