--- a/Pages/Editar/E_Emergencia.razor
+++ b/Pages/Editar/E_Emergencia.razor
@@ -125,36 +125,50 @@
             <RadzenTextBox  Bind="emergencia.Temperatura" name="Temperatura"/>
             <label for="Temperatura">C</label>
         </div>
+        <RadzenTabs SelectedIndex="0">
+        
+        <Tabs>
+    
+        <RadzenTabsItem Text="Diagnostico">
 
-        <div class="Entrada" style="display: inline-block;">
-            <label>Laboratorios</label>
+ 
+        <div class="Entrada" id="Hallazgos" style="width: 100%;;">
+
+            <div style="display: flex;">
+                <label for="Diagnostico">Diagnostico</label>
+                <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
+            </div>
+        </div>
+        </RadzenTabsItem>
+        <RadzenTabsItem Text="Laboratorio">
+        <div class="Entrada" style="display: flex;">
+
+            <br>
             <label for="Hemograma">Hemograma:</label>
-            <RadzenTextBox  Bind="emergencia.Hemogramas"  name="Hemograma"/>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Hemograma" @bind-Value="emergencia.Hemogramas" name="Hemograma"/>
             <label for="Ex_Orina">Ex.Orina:</label>
-            <RadzenTextBox Bind="emergencia.Ex_Orina" name="Ex_Orina"/>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Ex_Orina" @bind-Value="emergencia.Ex_Orina" name="Ex_Orina"/>
             <label for="Glisemia">Glisemia:</label>
-            <RadzenTextBox  Bind="emergencia.Glisemia" name="Glisemia"/>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Glisemia"@bind-Value="emergencia.Glisemia" name="Glisemia"/>
             <label for="Coprologico">Coprologico:</label>
-            <RadzenTextBox  Bind="emergencia.Coprologico" name="Coprologico"/>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Coprologico" @bind-Value="emergencia.Coprologico" name="Coprologico"/>
         </div>
         <br>
         <div class="Entrada" style="display: flex; align-items: center;">
             <label for="Imagenes">Imagenes:</label>
-            <RadzenTextBox Bind="emergencia.Imagenes" name="Imagenes"/>
+            <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
+            id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
-            <label for="Especificacion">Especfique</label>
-            <RadzenTextArea type="Especificacion" id="Especificacion" Bind="emergencia.Especifique"
-                name="Especificacion"></RadzenTextArea>
+            <label for="Especificacion">Especifique</label>
+            <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
-    </div>
-    <div class="Entrada" style="display: flex;">
-        <label for="Diagnostico">Diagnostico</label>
-        <RadzenTextArea  Bind="emergencia.Diagnostico" name="Diagnostico"/>
-    </div>
-    <div class="Entrada " style="display:flex;">
-        <label for="TyM">Tratamientos y Medicamentos:</label>
-        <RadzenTextArea   Bind="emergencia.TyM" name="TyM"></RadzenTextArea>
-    </div>
+        </RadzenTabsItem>
+        </Tabs>
+        </RadzenTabs>
     <center>
         <a href="/V_Emergencia/@emergencia.OrdenID"><button type="button" class="btn btn-primary"
                 style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
@@ -163,7 +177,7 @@
                 style="padding-left: 50px;padding-right: 50px; border-radius:50px; margin:10px;">Cancelar</button></a>
     </center>
 
-
+    </div>
 
 
 
