--- a/Pages/Editar/E_EmergenciaA.razor
+++ b/Pages/Editar/E_EmergenciaA.razor
@@ -116,7 +116,7 @@
         <div class="Entrada">
             <label for="Peso">Peso:</label>
             <RadzenNumeric  id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-             @bind-Value="emergencia.Peso" name="Peso"/>
+            @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
@@ -137,6 +137,11 @@
             <label for="Temperatura">C</label>
         </div>
 
+        <RadzenTabs SelectedIndex="0">
+        
+        <Tabs>
+    
+        <RadzenTabsItem Text="Diagnostico">
 
         <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
@@ -178,9 +183,11 @@
                 <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
-        <hr>
+        </RadzenTabsItem>
+        
+        <RadzenTabsItem Text="Laboratorios">
+
         <div class="Entrada" style="display: inline-block;">
-            <label>Laboratorios</label>
             <br>
             <label for="Hemograma">Hemograma:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
@@ -204,13 +211,16 @@
             <label for="Especificacion">Especfique</label>
             <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
-    </div>
+    
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
         <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
-
+    </RadzenTabsItem>
+    </Tabs>
+    </RadzenTabs>
+    </div>
     <center>
                 <a href="/V_EmergenciaA/@emergencia.OrdenID"><button type="button" class="btn btn-primary"
                 style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;"
