--- a/Pages/Registros/R_Emergencia.razor
+++ b/Pages/Registros/R_Emergencia.razor
@@ -130,18 +130,24 @@
             <label for="Temperatura">C</label>
         </div>
 
+        <RadzenTabs SelectedIndex="0">
+        
+        <Tabs>
+    
+        <RadzenTabsItem Text="Diagnostico">
 
-        <hr>
+ 
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
-            <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
+
             <div style="display: flex;">
                 <label for="Diagnostico">Diagnostico</label>
                 <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
-        <hr>
-        <div class="Entrada" style="display: inline-block;">
-            <label>Laboratorios</label>
+        </RadzenTabsItem>
+        <RadzenTabsItem Text="Laboratorio">
+        <div class="Entrada" style="display: flex;">
+
             <br>
             <label for="Hemograma">Hemograma:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
@@ -162,9 +168,12 @@
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
             id="Imagenes"@bind-Value="emergencia.Imagenes" name="Imagenes"/>
 
-            <label for="Especificacion">Especfique</label>
+            <label for="Especificacion">Especifique</label>
             <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
+        </RadzenTabsItem>
+        </Tabs>
+        </RadzenTabs>
     </div>
     <br>
     <div class="Entrada " style="display:flex;">
