--- a/Pages/Registros/R_EmergenciaA.razor
+++ b/Pages/Registros/R_EmergenciaA.razor
@@ -52,7 +52,6 @@
 
     <div class="Form">
 
-
             <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
@@ -73,9 +72,7 @@
                         </div>
                     </div>
                 </div>
-
-    </div>
-
+            </div>
     <div>
         <div class="Entrada">
             <label for="ars">ARS:</label>
@@ -137,8 +134,12 @@
             <label for="Temperatura">C</label>
         </div>
 
+         <RadzenTabs SelectedIndex="0">
+        
+        <Tabs>
+    
+        <RadzenTabsItem Text="Diagnostico">
 
-        <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
             <label style="color: rgb(103, 100, 100);">Hallazgos Positivos en el examen fisico</label>
             <div style="display: flex;">
@@ -178,9 +179,12 @@
                 <RadzenTextArea style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
-        <hr>
-        <div class="Entrada" style="display: inline-block;">
-            <label>Laboratorios</label>
+        
+        </RadzenTabsItem>
+        
+        <RadzenTabsItem Text="Laboratorios"> 
+
+        <div class="Entrada" style="display: flex;">
             <br>
             <label for="Hemograma">Hemograma:</label>
             <RadzenNumeric ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
@@ -204,17 +208,22 @@
             <label for="Especificacion">Especfique</label>
             <RadzenTextArea  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
-    </div>
+        
+    
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
         <RadzenTextArea  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
     </div>
-
+    
+    </RadzenTabsItem>
+    </Tabs>
+    </RadzenTabs>
     <center>
         <RadzenButton ButtonType="ButtonType.Submit" class="btn btn-primary" Click="Guardar"
             style="padding-left: 50px;padding-right: 50px; border-radius:50px; Background-Color:#3AB5F4; border-color:#3AB5F4; margin:10px;">Registrar</RadzenButton>
     </center>
+    </div>
     </div>
     </body>                             
 
