--- a/Pages/Vistas/V_EmergenciaA.razor
+++ b/Pages/Vistas/V_EmergenciaA.razor
@@ -55,7 +55,7 @@
 
     <div class="Form">
 
-           <div>
+            <div>
                 <br>
                 <div style="display: flex; justify-content: space-between;">
                     <div>
@@ -63,7 +63,7 @@
                         <RadzenDropDown Disabled=true  AllowClear="true" TValue="string"
                             FilterCaseSensitivity="FilterCaseSensitivity.CaseInsensitive" AllowFiltering="true"
                             class="w-100" Placeholder="Paciente"  Data="Paciente.GetList()" TextProperty="Cedula"
-                            ValueProperty="PacienteID" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
+                            ValueProperty="PacienteID"  style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;"
                             />
                             
                     </div>
@@ -118,7 +118,7 @@
         <div class="Entrada">
             <label for="Peso">Peso:</label>
             <RadzenNumeric  Disabled=true id="Peso" ShowUpDown="false" style="border-radius: 50px; background-color: #D9D9D9; border-color: #D9D9D9; border: 15px; margin: 5px;" 
-             @bind-Value="emergencia.Peso" name="Peso"/>
+            @bind-Value="emergencia.Peso" name="Peso"/>
             <label for="Peso">lbs</label>
         </div>
         <br>
@@ -139,6 +139,11 @@
             <label for="Temperatura">C</label>
         </div>
 
+        <RadzenTabs SelectedIndex="0">
+        
+        <Tabs>
+    
+        <RadzenTabsItem Text="Diagnostico">
 
         <hr>
         <div class="Entrada" id="Hallazgos" style="width: 100%;;">
@@ -180,7 +185,10 @@
                 <RadzenTextArea Disabled=true style="width: 100%;"   id="Diagnostico" @bind-Value="emergencia.Diagnostico" name="Diagnostico"/>
             </div>
         </div>
-        <hr>
+        </RadzenTabsItem>
+        
+        <RadzenTabsItem Text="Laboratorios">
+
         <div class="Entrada" style="display: inline-block;">
             <label>Laboratorios</label>
             <br>
@@ -206,11 +214,15 @@
             <label for="Especificacion">Especfique</label>
             <RadzenTextArea Disabled=true  style="width: 100%;" type="number" id="Especificacion"@bind-Value="emergencia.Especifique" name="Especificacion"></RadzenTextArea>
         </div>
-    </div>
+    
     <br>
     <div class="Entrada " style="display:flex;">
         <label for="TyM">Tratamientos y Medicamentos:</label>
         <RadzenTextArea Disabled=true  id="TyM" style="width: 100%;" @bind-Value="emergencia.TyM" name="TyM"></RadzenTextArea>
+    </div>
+        </RadzenTabsItem>
+    </Tabs>
+    </RadzenTabs>
     </div>
     </div>
     <center>
